--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "api-design-v3",
+  "name": "mern-crud-reminder",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "Scott Moss <willscottmoss@gmail.com>",
+  "author": "Adam Abundis <adamjabundis@gmail.com>",
   "license": "MIT",
   "scripts": {
     "build": "babel src --out-dir dist",
