update packages. Add concurrently to enable front-end/backend server

--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "license": "MIT",
   "scripts": {
     "build": "babel src --out-dir dist",
+    "client": "cd client && npm start",
     "test": "NODE_ENV=testing jest --forceExit --detectOpenHandles  --silent",
     "test-routes": "yarn test -t router",
     "test-models": "yarn test -t model",
     "test-controllers": "yarn test -t controllers",
     "test-auth": "yarn test -t Authentication:",
-    "dev": "nodemon --exec yarn restart",
+    "dev": "concurrently \"nodemon --exec yarn restart\" \"npm run client\"",
     "restart": "rimraf dist && yarn build && yarn start",
     "start": "node dist/index.js"
   },
@@ -23,13 +24,13 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
-    "lodash": "^4.17.11",
-    "mongoose": "^5.3.13",
+    "lodash": "^4.17.15",
+    "mongoose": "^5.9.7",
     "morgan": "^1.9.1",
     "validator": "^10.9.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
+    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
@@ -37,6 +38,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^8.2.1",
     "babel-jest": "^23.4.2",
+    "concurrently": "^5.1.0",
     "eslint": "^4.15.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^11.0.0",
